# lazycrate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  commands.rs  keymaps.rs  lib.rs  main.rs  panel.rs  parse_keys.rs  ui.rs  utils.rs
src/app/: mod.rs
src/parse_toml/: mod.rs
