[package]
name = "lazycrate"
version = "0.0.1"
description = "Simple terminal UI for cargo commands."
edition = "2021"
license = "MIT"
homepage = "https://github.com/tamton-aquib/lazycrate"
repository = "https://github.com/tamton-aquib/lazycrate"
readme = "README.md"
documentation = "https://docs.rs/lazycrate"
keywords = ["cargo", "TUI", "lazy"]

[dependencies]
crossterm = "0.24.0"
tui = "0.18.0"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
